[tool.poetry]
name = "LLMPerf"
version = "0.1.0"
description = "A framework for load testing LLM APIs"
authors = ["Avnish Narayan <avnish@anyscale.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pydantic = "<2.5"
ray = "*"
pytest = ">=6.0"
seaborn = ">=0.11"
awscli = ">=1.22"
typer = ">=0.4"
litellm = ">=0.1.738"
num2words = "*"
transformers = "*"
tqdm = "*"
boto3 = "*"
google-cloud-aiplatform = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"